[7.2.0] Enable android tests (#21898)
- Reverted https://github.com/bazelbuild/bazel/pull/21892
- Cherry-picked
https://github.com/bazelbuild/bazel/commit/86ac024c2bb0d0371710686a2aab47af1402599f
to fix the original test failures.

---------

Co-authored-by: Googler <hvd@google.com>